构建符合服务器要求的URL

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(path: ':viewpagerIndicator_library')
     compile project(':pullToRefresh_Library')
+    compile files('libs/commons-codec-1.10.jar')
+    compile files('libs/converter-gson-2.3.0.jar')
+    compile files('libs/converter-scalars-2.3.0.jar')
+    compile files('libs/gson-2.8.0.jar')
+    compile files('libs/okhttp-3.8.0.jar')
+    compile files('libs/okio-1.13.0.jar')
+    compile files('libs/picasso-2.5.2.jar')
+    compile files('libs/retrofit-2.3.0.jar')
+    compile files('libs/volley.jar')
 }
