--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".app.MyApp"
         android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.SplashActivity">
